# poof

./: .gitignore  Cargo.toml  README.md  verify_flow.sh
contracts/: Groth16Verifier.sol
prover/: Cargo.toml
prover/contracts/: Groth16Verifier.sol
prover/src/: circuit.rs  lib.rs  main.rs  utils.rs  verify.rs
verifier-contract/: .gitignore  CallVerifier.sol  Cargo.toml
verifier-contract/.cargo/: config.toml
verifier-contract/src/: main.rs
zk-cli/: Cargo.toml
zk-cli/src/: main.rs
zk-seance-hash/: Cargo.toml
zk-seance-hash/src/: lib.rs  main.rs  verifier.rs
zk-seance-hash/src/tests/: poseidon_hash_test.rs
