[package]
name = "prover"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-bn254 = "0.4"
ark-serialize = "0.4"
ark-groth16 = "0.4"
rand = "0.8"
anyhow = "1.0.98"
ethabi = "18.0"
hex = "0.4.3"
sha3 = "0.10.8"
