[package]
name = "zk-seance-hash"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff                = "0.4"
ark-ec                = "0.4"
ark-std               = "0.4"
ark-relations         = "0.4"
ark-serialize         = "0.4"
ark-groth16           = "0.4"
ark-bn254             = "0.4"
ark-r1cs-std          = { version = "0.4", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["crh","r1cs"] }
rand                  = { version = "0.8", features = ["std", "std_rng"] }
